[package]
name = "LethalModManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winreg = "0.52.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.22", features = ["stream"] }
sha2 = { version = "0.10", features = [] }
walkdir = "2.4.0"
serde_json = { version = "1.0", features = [] }
serde = { version = "1.0.193", features = ["derive"] }
futures-util = "0.3.29"
single-instance = "0.3.3"
